fixed display of Page and SideNav on small devices

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -396,8 +396,9 @@ svg:not(:root) {
   box-shadow: none;
 
 .side-nav-user
-  +below($med)
-    display: none;
+  &.fixed
+    +below($med)
+      display: none;
   transition: all 300ms $bezier;
   background-color: white;
   border-right: 1px solid grey;
